[project]
name = "section-48"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
section-48 = { workspace = true }

[dependency-groups]
dev = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "section-48",
]
