[project]
name = "section-48"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "dill>=0.4.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.2",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
section-48 = { workspace = true }

[dependency-groups]
dev = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "section-48",
]
